dp_dashboard.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
 name: dashboard-dp
spec:
 replicas: 1
 template:
  metadata:
   labels:
    app: dashboard-dp
  spec:
   containers:
   - name: dashboard-dp
     image: gcr.io/nh-v8-devops/dashboard-v8:latest
     imagePullPolicy: Always
     command: [ "/bin/bash", "-c", "--" ]
     args: [ "while true; do sleep 30; done;" ]
     command: [ "/bin/bash", "-c", "--" ]
     args: [ "while true; do monit;sleep 10; done;" ]
     ports:
     - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: dashboard-svc
  labels:
    run: dashboard-svc
  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"80":"dashboard-bec"}}'
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: dashboard-dp
