dp_kibana.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
 name: kibana-dp
spec:
 replicas: 1
 template:
  metadata:
   labels:
    app: kibana-dp
  spec:
   containers:
   - name: kibana-dp
     image: gcr.io/nh-v8-devops/kibana:latest
     imagePullPolicy: Always
     command: [ "/bin/bash", "-c", "--" ]
     args: [ "while true; do sleep 30; done;" ]
     command: [ "/bin/bash", "-c", "--" ]
     args: [ "while true; do monit;sleep 10; done;" ]
     ports:
     - containerPort: 5601
   imagePullSecrets:
   - name: nanohealsecret

---

apiVersion: v1
kind: Service
metadata:
  name: kibana-svc
  labels:
    run: kibana-svc
spec:
  type: NodePort
  ports:
  - port: 5601
    protocol: TCP
  selector:
    app: kibana-dp
