dp_licensing.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
 name: licensing-dp
spec:
 replicas: 1
 template:
  metadata:
   labels:
    app: licensing-dp
  spec:
   containers:
   - name: licensing-dp
     image: gcr.io/nh-v8-devops/licensing:latest
     imagePullPolicy: Always
     command: [ "/bin/bash", "-c", "--" ]
     args: [ "while true; do sleep 30; done;" ]
     command: [ "/bin/bash", "-c", "--" ]
     args: [ "while true; do monit;sleep 30; done;" ]
     ports:
     - containerPort: 80
     - containerPort: 4791
     - containerPort: 21
     volumeMounts:
       - name: mysql-data
         mountPath: /var/lib/mysql
       - name: ftp-data
         mountPath: /home/nanoheal
   volumes:
     - name: mysql-data
       persistentVolumeClaim:
          claimName: licensing-vl
     - name: ftp-data
       persistentVolumeClaim:
          claimName: licensing2-vl

---

apiVersion: v1
kind: Service
metadata:
  name: licensing-svc
  labels:
    run: licensing-svc
  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"80":"licensing-bec"}}'
spec:
  type: NodePort
  ports:
  - name: nginx
    port: 80
    protocol: TCP
  - name: mysql
    port: 4791
    protocol: TCP
  - name: ftp
    port: 21
    protocol: TCP
  selector:
    app: licensing-dp
