dp_noderedis.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
 name: noderedis-dp
spec:
 replicas: 1
 template:
  metadata:
   labels:
    app: noderedis-dp
  spec:
   containers:
   - name: noderedis-dp
     image: gcr.io/nh-v8-devops/noderedis:latest
     imagePullPolicy: Always
     command: [ "/bin/bash", "-c", "--" ]
     args: [ "while true; do sleep 30; done;" ]
     command: [ "/bin/bash", "-c", "--" ]
     args: [ "while true; do monit;sleep 30; done;" ]
     ports:
     - containerPort: 443
     - containerPort: 6379

---

apiVersion: v1
kind: Service
metadata:
  name: noderedis-svc
  labels:
    run: noderedis-svc
  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"443":"noderedis-bec"}}'
spec:
  type: NodePort
  ports:
  - name: node
    port: 443
    protocol: TCP
  - name: redis
    port: 6379
    protocol: TCP
  selector:
    app: noderedis-dp
