dp_report.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
 name: report-dp
spec:
 replicas: 1
 template:
  metadata:
   labels:
    app: report-dp
  spec:
   containers:
   - name: report-dp
     image: gcr.io/nh-v8-devops/report:latest
     imagePullPolicy: Always
     command: [ "/bin/bash", "-c", "--" ]
     args: [ "while true; do sleep 30; done;" ]
     command: [ "/bin/bash", "-c", "--" ]
     args: [ "while true; do monit;sleep 30; done;" ]
     ports:
     - containerPort: 80
     livenessProbe:
        httpGet:
            path: /main/rpc/rpc.php
            port: 80
        initialDelaySeconds: 30
        periodSeconds: 5

---

apiVersion: v1
kind: Service
metadata:
  name: report-svc
  labels:
    run: report-svc
  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"80":"report-bec"}}'
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: report-dp
